--- a/.github/workflows/my_basics.yml
+++ b/.github/workflows/my_basics.yml
@@ -8,13 +8,13 @@ on:
 jobs:
 
   my_testing:
-    runs_on: ubuntu-latest
+    runs-on: ubuntu-latest
     steps:
         - name: Print Hello message
           run : echo "Hello world from Testing job"
    
   my_deploy:
-    runs_on: ubuntu-latest
+    runs-on: ubuntu-latest
     steps:
        - name: Print Hello message
          run : echo "Hello world from Testing job" 
