--- a/.github/workflows/my_basics.yml
+++ b/.github/workflows/my_basics.yml
@@ -15,7 +15,8 @@ jobs:
    
   my_deploy:
     runs-on: ubuntu-latest
+    needs: [my_testing]
     steps:
        - name: Print Hello message
-         run : echo "Hello world from Testing job" 
+         run : echo "Hello world from Deploy job" 
  
