--- a/.github/workflows/my_basics.yml
+++ b/.github/workflows/my_basics.yml
@@ -1,4 +1,7 @@
 name: My-GitHub-Actions
+env:
+  APPLICATION_NAME       : "Flask"
+  DEPLOY_PACKAGE_NAME    : "flask_deploy_ver-${{ github.sha }}"
 
 on:
   push:
@@ -12,6 +15,12 @@ jobs:
     steps:
         - name: Print Hello message
           run : echo "Hello world from Testing job"
+          
+        - name: Execute few commands
+          run : |
+            echo "Hello Message1"
+            echo "Hello Message2"
+            echo "Application name: ${{ env.APPLICATION_NAME }}"
    
   my_deploy:
     runs-on: ubuntu-latest
@@ -19,4 +28,7 @@ jobs:
     steps:
        - name: Print Hello message
          run : echo "Hello world from Deploy job" 
+        
+       - name: Printing Deployment message
+         run : echo "Deploy Package name is ${{ env.DEPLOY_PACKAGE_NAME }}"
  
