--- a/.github/workflows/my_basics.yml
+++ b/.github/workflows/my_basics.yml
@@ -21,6 +21,9 @@ jobs:
             echo "Hello Message1"
             echo "Hello Message2"
             echo "Application name: ${{ env.APPLICATION_NAME }}"
+        
+        - name: List folder content
+          run : ls -la
    
   my_deploy:
     runs-on: ubuntu-latest
