--- a/.github/workflows/my_basics.yml
+++ b/.github/workflows/my_basics.yml
@@ -21,6 +21,9 @@ jobs:
             echo "Hello Message1"
             echo "Hello Message2"
             echo "Application name: ${{ env.APPLICATION_NAME }}"
+            
+        - name: "Git clone"
+          run : actions/checkout@v1
         
         - name: List folder content
           run : ls -la
@@ -35,3 +38,5 @@ jobs:
        - name: Printing Deployment message
          run : echo "Deploy Package name is ${{ env.DEPLOY_PACKAGE_NAME }}"
  
+       - name: zip
+         run : zip
