--- a/.github/workflows/my_basics.yml
+++ b/.github/workflows/my_basics.yml
@@ -23,7 +23,7 @@ jobs:
             echo "Application name: ${{ env.APPLICATION_NAME }}"
             
         - name: "Git clone"
-          run : actions/checkout@v1
+          run : git-tag/checkout@v1
         
         - name: List folder content
           run : ls -la
